[75] Fix style for button and overflow for modal body

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,7 +44,8 @@
   }
 
   &__button-apply {
-    margin: 20px auto;
+    margin: 10px auto;
+    text-transform: uppercase;
     cursor: pointer;
   }
 }
